--- a/src/global.scss
+++ b/src/global.scss
@@ -36,6 +36,8 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 #background-content {
   background: #00b3a5 !important;
 }
