--- a/src/app/pages/room/room.page.html
+++ b/src/app/pages/room/room.page.html
@@ -45,28 +45,40 @@
         <label class="color-label">Choose Color:</label>
         <ion-segment mode="md" [(ngModel)]="chosenColor" class="color-segment">
           <ion-segment-button value="B">
-            <ion-label>BLACK</ion-label>
+            <ion-label class="choose-color" style="color: rgb(55, 49, 42)">
+              <div class="score-indicator player-black"></div>
+              <span>BLACK</span>
+            </ion-label>
           </ion-segment-button>
           <ion-segment-button value="W">
-            <ion-label>WHITE</ion-label>
+            <ion-label class="choose-color" style="color: rgb(55, 49, 42)">
+              <div class="score-indicator player-white"></div>
+              <span>WHITE</span>
+            </ion-label>
           </ion-segment-button>
         </ion-segment>
       </div>
 
       <!-- Action Buttons -->
       <div class="button-row">
-        <ion-button (click)="createRoom()" class="cartoon-button" color="primary">
+        <ion-button
+          (click)="createRoom()"
+          class="cartoon-button"
+          color="primary"
+        >
           Create Room
         </ion-button>
-        <ion-button (click)="joinRoom()" class="cartoon-button" color="tertiary">
+        <ion-button
+          (click)="joinRoom()"
+          class="cartoon-button"
+          color="tertiary"
+        >
           Join Room
         </ion-button>
       </div>
 
       <!-- Error / Info Message -->
-      <div *ngIf="errorMessage" class="error-label">
-        {{ errorMessage }}
-      </div>
+      <div *ngIf="errorMessage" class="error-label">{{ errorMessage }}</div>
     </div>
   </div>
 </ion-content>
