--- a/src/app/pages/room/room.page.scss
+++ b/src/app/pages/room/room.page.scss
@@ -122,3 +122,11 @@
   margin: 0.25rem 0;
   justify-content: center;
 }
+
+.instruction-message {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin: 10px 0;
+  font-size: 11px;
+  color: rgb(68, 85, 108);
+}
